samples/_failures_safe/1761424078_eb16ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f357644.c: In function ‘main’:
./samples/SAFE/__tmp_2f357644.c:163:9: error: expected declaration or statement at end of input
  163 |         if (distances[i] == INT_MAX) {
      |         ^~
./samples/SAFE/__tmp_2f357644.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f357644.c:163:9: error: expected declaration or statement at end of input
